assets/css/style.css
/* ... */
.header-nav__close span::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}
.header-nav__close span::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

/* menu is open
 * ----------------------------------------------- */
.menu-is-open .header-nav {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  visibility: visible;
  -webkit-overflow-scrolling: touch;
}
.menu-is-open .header-nav .header-nav__content {
  opacity: 1;
  visibility: visible;
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0.3s;
  transition-delay: 0.3s;
  left: 0;
}

/* ------------------------------------------------------------------- 
 * ## mobile menu toggle 
 * ------------------------------------------------------------------- */
.header-menu-toggle {
  position: fixed;
  right: 110px;
  top: 42px;
  width: 48px;
  height: 45px;
  line-height: 45px;
  font-family: "metropolis-regular", sans-serif;
  font-size: 1.4rem;
  text-transform: uppercase;
  letter-spacing: 0.4rem;
  color: #ffffff;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

.header-menu-toggle.opaque {
  border-radius: 5px;
  background: #265db9 !important;
  background-image: linear-gradient(
    to right top,
    #6871f4,
    #6871f4,
    #6871f48f,
    #265db9,
    #265db9b0
  ) !important;
}
.header-menu-toggle.opaque::before {
  display: none;
}
.header-menu-toggle:hover,
.header-menu-toggle:focus,
.header-menu-toggle:active {
  color: #cc147f;
}

.header-menu-icon {
  display: block;
  width: 35px;
  height: 3px;
  margin-top: -1px;
  right: auto;
  bottom: auto;
  background-color: white;
  position: absolute;
  left: 0px;
  top: 50%;
}
.header-menu-icon::before,
.header-menu-icon::after {
  content: "";
  width: 78%;
  height: 100%;
  background-color: inherit;
  position: absolute;
  left: 8px;
  margin: -2px 0px;
}
.header-menu-icon::before {
  top: -9px;
}
.header-menu-icon::after {
  bottom: -9px;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * header
 * ------------------------------------------------------------------- */
@media only screen and (max-width: 1600px) {
  .header-logo {
    left: 60px;
  }

  .header-menu-toggle {
    right: 60px;
    padding: 20px;
  }
}
@media only screen and (max-width: 800px) {
  .header-logo {
    left: 40px;
  }

  .header-menu-toggle {
    right: 40px;
  }
}
@media only screen and (max-width: 600px) {
  .s-header {
    height: 90px;
    top: 12px;
  }

  .header-logo {
    left: 30px;
  }

  .header-menu-toggle {
    right: 25px;
    top: 30px;
  }
}
@media only screen and (max-width: 500px) {
  .header-menu-toggle::before {
    display: none;
  }
}
@media only screen and (max-width: 400px) {
  .s-header {
    top: 6px;
  }

  .header-logo {
    left: 25px;
    top: 60px;
  }

  .header-menu-toggle {
    top: 24px;
    right: 20px;
  }
}

/* header area 2*/
/*--------------------------------------------------*/

/*
5.start banner area 1*/
/*--------------------------------------------------*/

#banner {
  position: relative;
  height: 100vh;
}

.about-banner {
  
}

.bg-banner-img {
  /* background-image: url(../images/youshopee-banner.jpeg); */
  background-repeat: no-repeat;
  /* background-position: center bottom; */
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  position: relative;
  max-width: 100%;
}

.about-bg-banner-img {
  background: rgba(255, 255, 255, 0);
  background-image: url(../images/about_banner.jpg);
  background-repeat: no-repeat;
  background-position: center bottom;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  position: relative;
  max-width: 100%;
}
.service-bg-banner-img {
  background: rgba(255, 255, 255, 0);
  background-image: url(../images/banner_service.jpg);
  background-repeat: no-repeat;
  background-position: center bottom;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  position: relative;
  max-width: 100%;
}

.clip-ellipse {
  clip-path: ellipse(95% 100% at top);
  -webkit-clip-path: ellipse(93% 100% at top);
}
.mb-90 {
  padding-bottom: 140px;
  padding-top: 200px;
}
.py_120 {
  padding: 120px 0px;
}
.back-shap {
  background-image: url(../images/shap-a.png);
  background-repeat: no-repeat;
  background-position: center;
  -webkit-background-size: contain;
  -moz-background-size: contain;
  -o-background-size: contain;
  background-size: contain;
}

.overlay-all {
  position: relative;
  left: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  background-color: rgba(11, 13, 37, 0.4);
}

.ovrllay {
  position: relative;
  left: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  right: 0;
  background: #0000009c;
}
img {
  vertical-align: middle;
  max-width: 100%;
}
.shap_top {
  font-size: 30px;
  font-weight: 600;
  color: #fff;
  padding-bottom: 30px;
}
.all-text {
  padding: 108px 50px;
}
.shap_bottom {
  font-size: 20px;
  line-height: 30px;
  color: #fff;
}

.banner-text {
  text-align: left;
  font-size: 20px;
  color: #fff;
  line-height: 40px;
}

.banner-shap-img {
  background-image: url(../images/shap-banner.png);
  background-repeat: no-repeat;
  background-position: center top;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  bottom: 0px;
  height: 100px;
  position: absolute;
  z-index: 9;
  left: 0;
  right: 0;
}

.py-70 {
  padding: 70px 0px;
}
.pb_90 {
  padding-bottom: 100px;
}
.mb-60 {
  margin-bottom: 60px;
}
/* ... */

